--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,11 @@ dependencies:
   provider: ^6.0.5
   auto_route: ^7.8.3
   counter_button: ^1.0.1
-
-
-
+  image_picker: ^1.0.4
+  socket_io_client: ^2.0.3+1 
+  dotted_border: ^2.0.0+3
+  firebase_auth: ^4.10.1
+  cloud_firestore: ^4.9.3
 
 dev_dependencies:
   flutter_test:
