--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dotted_border: ^2.0.0+3
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.9.3
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,7 @@ flutter:
     - assets/shopping/
     - assets/other_material/
     - assets/disease/
-    
+    - assets/weather/
+
 
   
